{
  "version": 4,
  "terraform_version": "0.12.23",
  "serial": 130,
  "lineage": "db6c3eaf-b939-41d3-b4a1-398539cbb4bd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "public_alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:367921556108:loadbalancer/app/public-alb/1873f48a2a7a11f0",
            "arn_suffix": "app/public-alb/1873f48a2a7a11f0",
            "dns_name": "public-alb-1820551827.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:367921556108:loadbalancer/app/public-alb/1873f48a2a7a11f0",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "public-alb",
            "security_groups": [
              "sg-07a6d42dc2b5a6ba6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0863d6594d73a7bc0"
              },
              {
                "subnet_id": "subnet-0b3e0a35a0a78d057"
              }
            ],
            "subnets": [
              "subnet-0863d6594d73a7bc0",
              "subnet-0b3e0a35a0a78d057"
            ],
            "tags": {
              "Name": "public_alb"
            },
            "vpc_id": "vpc-0429fe906627fdc13",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "aws_security_group.public_security_group",
            "aws_subnet.public_subnet_a",
            "aws_subnet.public_subnet_c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "alb_listener",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:367921556108:listener/app/public-alb/1873f48a2a7a11f0/5dd7d2c42edebb8b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:367921556108:targetgroup/public-alb-target/ca01029c2d936882",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:367921556108:listener/app/public-alb/1873f48a2a7a11f0/5dd7d2c42edebb8b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:367921556108:loadbalancer/app/public-alb/1873f48a2a7a11f0",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_alb.public_alb",
            "aws_alb_target_group.public_alb_target"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "public_alb_target",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:367921556108:targetgroup/public-alb-target/ca01029c2d936882",
            "arn_suffix": "targetgroup/public-alb-target/ca01029c2d936882",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:367921556108:targetgroup/public-alb-target/ca01029c2d936882",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "public-alb-target",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0429fe906627fdc13"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "target_attachment_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:367921556108:targetgroup/public-alb-target/ca01029c2d936882-20210128163246643600000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:367921556108:targetgroup/public-alb-target/ca01029c2d936882",
            "target_id": "i-02ee0332194bb0d6c"
          },
          "dependencies": [
            "aws_alb_target_group.public_alb_target",
            "aws_instance.public_ec2_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "target_attachment_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:367921556108:targetgroup/public-alb-target/ca01029c2d936882-20210128163246687500000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:367921556108:targetgroup/public-alb-target/ca01029c2d936882",
            "target_id": "i-021ed04fc1586123a"
          },
          "dependencies": [
            "aws_alb_target_group.public_alb_target",
            "aws_instance.public_ec2_c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-05bbb0a64d01d9305",
            "domain": "vpc",
            "id": "eipalloc-0038bb1e673bcc8e6",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-029c0e84399c3c6f0",
            "private_dns": "ip-10-0-0-141.ap-northeast-2.compute.internal",
            "private_ip": "10.0.0.141",
            "public_dns": "ec2-15-164-21-90.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "15.164.21.90",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0a7d714f14b52b754",
            "domain": "vpc",
            "id": "eipalloc-05f59d44e4cf40558",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-02ca0aad0bbea923c",
            "private_dns": "ip-10-0-1-242.ap-northeast-2.compute.internal",
            "private_ip": "10.0.1.242",
            "public_dns": "ec2-52-78-73-197.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "52.78.73.197",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_ec2_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e67aff698cb24c1d",
            "arn": "arn:aws:ec2:ap-northeast-2:367921556108:instance/i-0043043b4236a3667",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0043043b4236a3667",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "alb-study",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0db39796bb04802a8",
            "private_dns": "ip-10-0-2-206.ap-northeast-2.compute.internal",
            "private_ip": "10.0.2.206",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03a36bf1bc1449039",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cc2d654567825f66",
            "tags": {
              "Name": "private_ec2_a"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-074df68c94f281d8d"
            ]
          },
          "dependencies": [
            "aws_security_group.private_security_group",
            "aws_subnet.private_subnet_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_ec2_c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e67aff698cb24c1d",
            "arn": "arn:aws:ec2:ap-northeast-2:367921556108:instance/i-0152b194067f285ce",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0152b194067f285ce",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "alb-study",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bacb5dc0735962cf",
            "private_dns": "ip-10-0-3-155.ap-northeast-2.compute.internal",
            "private_ip": "10.0.3.155",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-006c1f8b122235fc5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06e0604744a75d046",
            "tags": {
              "Name": "private_ec2_c"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-074df68c94f281d8d"
            ]
          },
          "dependencies": [
            "aws_security_group.private_security_group",
            "aws_subnet.private_subnet_c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_ec2_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e67aff698cb24c1d",
            "arn": "arn:aws:ec2:ap-northeast-2:367921556108:instance/i-02ee0332194bb0d6c",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02ee0332194bb0d6c",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "alb-study",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0531d2d2f639fdf05",
            "private_dns": "ip-10-0-0-30.ap-northeast-2.compute.internal",
            "private_ip": "10.0.0.30",
            "public_ip": "13.124.198.163",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cecce6435b18ddf6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0863d6594d73a7bc0",
            "tags": {
              "Name": "public_ec2_a"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07a6d42dc2b5a6ba6"
            ]
          },
          "dependencies": [
            "aws_security_group.public_security_group",
            "aws_subnet.public_subnet_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_ec2_c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e67aff698cb24c1d",
            "arn": "arn:aws:ec2:ap-northeast-2:367921556108:instance/i-021ed04fc1586123a",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-021ed04fc1586123a",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "alb-study",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e256fbcb5957e310",
            "private_dns": "ip-10-0-1-48.ap-northeast-2.compute.internal",
            "private_ip": "10.0.1.48",
            "public_ip": "54.180.118.36",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-057c74eff66d7ff98",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b3e0a35a0a78d057",
            "tags": {
              "Name": "public_ec2_c"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07a6d42dc2b5a6ba6"
            ]
          },
          "dependencies": [
            "aws_security_group.public_security_group",
            "aws_subnet.public_subnet_c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:367921556108:internet-gateway/igw-0eef90a24f591f033",
            "id": "igw-0eef90a24f591f033",
            "owner_id": "367921556108",
            "tags": {
              "Name": "main_igw"
            },
            "vpc_id": "vpc-0429fe906627fdc13"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0038bb1e673bcc8e6",
            "id": "nat-0701ceb2cd0aa87a6",
            "network_interface_id": "eni-029c0e84399c3c6f0",
            "private_ip": "10.0.0.141",
            "public_ip": "15.164.21.90",
            "subnet_id": "subnet-0863d6594d73a7bc0",
            "tags": {
              "Name": "nat_gateway_a"
            }
          },
          "dependencies": [
            "aws_eip.nat_a",
            "aws_subnet.public_subnet_a",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05f59d44e4cf40558",
            "id": "nat-06717464b30d4f31d",
            "network_interface_id": "eni-02ca0aad0bbea923c",
            "private_ip": "10.0.1.242",
            "public_ip": "52.78.73.197",
            "subnet_id": "subnet-0b3e0a35a0a78d057",
            "tags": {
              "Name": "nat_gateway_c"
            }
          },
          "dependencies": [
            "aws_eip.nat_c",
            "aws_subnet.public_subnet_c",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-051a58f41c38e5d921080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0701ceb2cd0aa87a6",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-051a58f41c38e5d92",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.nat_a",
            "aws_nat_gateway.nat_gateway_a",
            "aws_route_table.private_route_table_a",
            "aws_subnet.public_subnet_a",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-034e686c8de673e341080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06717464b30d4f31d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-034e686c8de673e34",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_nat_gateway.nat_gateway_c",
            "aws_route_table.private_route_table_c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0eef90a24f591f033",
            "id": "r-rtb-009526f4b0fe1956e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-009526f4b0fe1956e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_route_table.public_route_table",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-051a58f41c38e5d92",
            "owner_id": "367921556108",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0701ceb2cd0aa87a6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_route_table_a"
            },
            "vpc_id": "vpc-0429fe906627fdc13"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table_c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-034e686c8de673e34",
            "owner_id": "367921556108",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06717464b30d4f31d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_route_table_c"
            },
            "vpc_id": "vpc-0429fe906627fdc13"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-009526f4b0fe1956e",
            "owner_id": "367921556108",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0eef90a24f591f033",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route_table"
            },
            "vpc_id": "vpc-0429fe906627fdc13"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a865bddc835124cc",
            "route_table_id": "rtb-051a58f41c38e5d92",
            "subnet_id": "subnet-0cc2d654567825f66"
          },
          "dependencies": [
            "aws_route_table.private_route_table_a",
            "aws_subnet.private_subnet_a",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0655140840e70a4eb",
            "route_table_id": "rtb-034e686c8de673e34",
            "subnet_id": "subnet-06e0604744a75d046"
          },
          "dependencies": [
            "aws_route_table.private_route_table_c",
            "aws_subnet.private_subnet_c",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0761cb4a6fe5f6066",
            "route_table_id": "rtb-009526f4b0fe1956e",
            "subnet_id": "subnet-0863d6594d73a7bc0"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_a",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0855d811d726c6095",
            "route_table_id": "rtb-009526f4b0fe1956e",
            "subnet_id": "subnet-0b3e0a35a0a78d057"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_c",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "new_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:367921556108:security-group/sg-0d624dbd3d3414625",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d624dbd3d3414625",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "new_security_group",
            "name_prefix": "",
            "owner_id": "367921556108",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "new_secuirty_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0429fe906627fdc13"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:367921556108:security-group/sg-074df68c94f281d8d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-074df68c94f281d8d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07a6d42dc2b5a6ba6"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07a6d42dc2b5a6ba6"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "private_security_group",
            "name_prefix": "",
            "owner_id": "367921556108",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private_secuirty_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0429fe906627fdc13"
          },
          "dependencies": [
            "aws_security_group.public_security_group",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:367921556108:security-group/sg-07a6d42dc2b5a6ba6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07a6d42dc2b5a6ba6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "public_security_group",
            "name_prefix": "",
            "owner_id": "367921556108",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public_secuirty_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0429fe906627fdc13"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:367921556108:subnet/subnet-0cc2d654567825f66",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0cc2d654567825f66",
            "map_public_ip_on_launch": false,
            "owner_id": "367921556108",
            "tags": {
              "Name": "private_subnet_a"
            },
            "vpc_id": "vpc-0429fe906627fdc13"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:367921556108:subnet/subnet-06e0604744a75d046",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-06e0604744a75d046",
            "map_public_ip_on_launch": false,
            "owner_id": "367921556108",
            "tags": {
              "Name": "private_subnet_c"
            },
            "vpc_id": "vpc-0429fe906627fdc13"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:367921556108:subnet/subnet-0863d6594d73a7bc0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0863d6594d73a7bc0",
            "map_public_ip_on_launch": true,
            "owner_id": "367921556108",
            "tags": {
              "Name": "public_subnet_a"
            },
            "vpc_id": "vpc-0429fe906627fdc13"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:367921556108:subnet/subnet-0b3e0a35a0a78d057",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0b3e0a35a0a78d057",
            "map_public_ip_on_launch": true,
            "owner_id": "367921556108",
            "tags": {
              "Name": "public_subnet_c"
            },
            "vpc_id": "vpc-0429fe906627fdc13"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:367921556108:vpc/vpc-0429fe906627fdc13",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08ea604ace4f377e2",
            "default_route_table_id": "rtb-0d803216e63076919",
            "default_security_group_id": "sg-08fc40094650d54b1",
            "dhcp_options_id": "dopt-0a79f061",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0429fe906627fdc13",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d803216e63076919",
            "owner_id": "367921556108",
            "tags": {
              "Name": "main_vpc"
            }
          }
        }
      ]
    }
  ]
}